--- a/views/profile.pug
+++ b/views/profile.pug
@@ -85,6 +85,15 @@ block content
                 list-style-type: none;
             }
 
+            .scrollable {
+                max-height: 300px; /* Maximum height of the event list */
+                overflow-y: auto; /* Enable vertical scrolling */
+                width: 100%; /* Make sure it takes the full available width */
+                margin-top: 10px;
+                padding: 0;
+                list-style-type: none;
+            }
+
             .edit-profile-button {
                 font-size: 0.9em; /* Adjust button font size for smaller screens */
                 padding: 0.5rem 1rem; /* Adjust button padding for smaller screens */
@@ -102,7 +111,7 @@ block content
                 h2 Username: #{user.username}
                 h3 Email: #{user.email}
                 h3 Events: #{numEvents}
-                ul.event-list
+                ul.event-list(class=user.events.length > 5 ? 'scrollable': '')
                     each event in user.events
                         li
                             a(href=event.url, class='event-link') #{event.title}
