--- a/views/profile.pug
+++ b/views/profile.pug
@@ -91,6 +91,17 @@ block content
                 overflow-y: auto; /* Enable vertical scrolling */
             }
 
+            .event-list li {
+                word-wrap: break-word;
+                overflow-wrap: break-word;
+                word-break: break-word;
+            }
+
+            .user-info h3 {
+                word-wrap: break-word;
+                overflow-wrap: break-word;
+                word-break: break-word;
+            }
 
             .edit-profile-button {
                 font-size: 0.9em; /* Adjust button font size for smaller screens */
