--- a/views/profile.pug
+++ b/views/profile.pug
@@ -37,7 +37,7 @@ block content
 
         li {
             margin: 5px 0;
-            white-space: nowrap;
+            white-space: normal;
         }
 
         .event-link {
@@ -89,18 +89,6 @@ block content
                 list-style-type: none;
                 max-height: 300px; /* Limit the height */
                 overflow-y: auto; /* Enable vertical scrolling */
-            }
-
-            .event-list li {
-                word-wrap: break-word;
-                overflow-wrap: break-word;
-                word-break: break-word;
-            }
-
-            .user-info h3 {
-                word-wrap: break-word;
-                overflow-wrap: break-word;
-                word-break: break-word;
             }
 
             .edit-profile-button {
