--- a/views/game_detail.pug
+++ b/views/game_detail.pug
@@ -59,6 +59,7 @@ block content
     @media only screen and (max-width: 600px) {
       .w3-container {
         padding: 16px;
+        margin: 60px auto;
       }
 
       iframe.mobile-friendly {
