--- a/views/event_detail_unsigned.pug
+++ b/views/event_detail_unsigned.pug
@@ -55,14 +55,7 @@ block content
 
   style.
     @media only screen and (max-width: 600px) {
-      .w3-container{
-        display: block;
-        margin: 60px auto;
-        width: 50vw;
-        text-align: center;
-      }
-
-      .w3-button {
+      .w3-container .w3-button {
         display: block;
         margin: 0 auto;
         width: 50vw;
