--- a/views/layout.pug
+++ b/views/layout.pug
@@ -268,7 +268,7 @@ body(class='body-container w3-black')
     footer(class='footer')
         a(href='/privacy-policy') Privacy Policy
         |  |
-        a(href='/terms-of-service') Terms of Use
+        a(href='/terms-of-service') Terms of Service
         |
         span Copyright 2024
 
