--- a/views/layout.pug
+++ b/views/layout.pug
@@ -210,7 +210,7 @@ html(lang='en')
                 position: relative;
                 width: 100%;
                 height: 90vh;
-                background: url("/images/gamersdenbackground") no-repeat center center/cover;
+                background: url("/images/gamersdenbackground.png") no-repeat center center/cover;
                 background-size: cover;
                 background-position: center;
                 display: flex;
