--- a/views/edit_profile.pug
+++ b/views/edit_profile.pug
@@ -5,6 +5,9 @@ block content
   div(class='w3-container w3-padding-large')
     form(method='POST', action='/user/profile/edit', enctype='multipart/form-data', style='max-width: 600px; margin: 0 auto; padding: 20px; border: 2px solid #333; border-radius: 10px; background-color: #333; text-align: center;')
       h1= title
+      if error
+        .error-message(style="color: red; margin-bottom: 1rem;")
+          p= error
 
       // Username input field
       div.form-group(style='margin-bottom: 20px;')
@@ -35,6 +38,7 @@ block content
     ul(style='color: red;')
       each error in errors
         li= error.msg
+
 
   style.
     form label {
