--- a/views/layout.pug
+++ b/views/layout.pug
@@ -276,6 +276,8 @@ body(class='body-container w3-black')
         div.w3-modal-content.w3-animate-opacity.w3-card-4(style='max-width: 300px;')
             header
                 h2 Cookie Consent
+                a(href='/cookie-policy') Read our cookie policy
+
             div.w3-container
                 p By visiting our site, you accept that we collect only the necessary cookies.
             footer
