description field nie altijd editten

--- a/views/event_form.pug
+++ b/views/event_form.pug
@@ -12,7 +12,7 @@ block content
       // Summary textarea field
       div.form-group(style='margin-bottom: 20px;')
         label(for='description' style=' display: block; margin-bottom: 5px;') Summary:
-        textarea.w3-input.w3-border.w3-round-large#description.form-control(placeholder='Description', name='description', required value=(undefined === event ? '' : event.title), style='width: 100%; height: 80px; padding: 10px; background-color: #f1f1f1; resize: vertical;')
+        textarea.w3-input.w3-border.w3-round-large#description.form-control(placeholder='Description', name='description', required value=(undefined === event ? '' : event.description), style='width: 100%; height: 80px; padding: 10px; background-color: #f1f1f1; resize: vertical;')
 
       // Platform select field
       div.form-group(style='margin-bottom: 20px;')
