--- a/views/event_form.pug
+++ b/views/event_form.pug
@@ -27,7 +27,7 @@ block content
       div.form-group(style='margin-bottom: 20px; position: relative;')
         label(for='game' style=' display: block; margin-bottom: 5px;') Game:
         input.w3-input.w3-border.w3-round-large#game.form-control(type='text', placeholder='Search games...', value=(event && event.game ? event.game.name : '') , oninput="filtergames()", required style='width: 100%;')
-        input(type='hidden', name='game', id='selected-game-id')
+        input(type='hidden', name='game', id='selected-game-id', value=(event && event.game ? event.game._id : ''))
         // Custom dropdown menu
         div#game-list(style=' max-width: 600px; width: 100%;   background-color: #fff; display: none; color: black; border-radius: 10px;')
           each game in games
