--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   // Event Title Section
   div.w3-container.w3-padding-32.w3-center
-    h1.w3-xxlarge.w3-text-white(style='white-space: normal; overflow: hidden; text-overflow: ellipsis;') #{event.title}
+    h1.w3-xxlarge.w3-text-white(style='white-space: normal; word-wrap: break-word; overflow: hidden; text-overflow: ellipsis;') #{event.title}
 
   // Game and Description Section
   div.w3-container.w3-padding-16
@@ -13,7 +13,7 @@ block content
       a.w3-text-blue.w3-hover-text-light-blue(href=event.game.url) #{event.game.name}
     p.w3-large
       strong Summary:
-      span(style='margin-left: 10px;') #{event.description}
+      span(style='margin-left: 10px; white-space: normal; word-wrap: break-word;') #{event.description}
     p.w3-large
       strong Date:
       span(style='margin-left: 10px;')
